# munje

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml
.github/workflows/: rust-clippy.yml
k8s/: ingress.yaml
k8s/cluster/: frontend.yaml
munje/: Cargo.toml  sqlx-data.json
munje/migrations/: 20211016224532_create-tables.down.sql  20211016224532_create-tables.up.sql  20211018233937_add-site-logo.down.sql  20211018233937_add-site-logo.up.sql  20211024160238_add-tables.down.sql  20211024160238_add-tables.up.sql  20211026025632_add-text.down.sql  20211026025632_add-text.up.sql  20211027020305_add-title.down.sql  20211027020305_add-title.up.sql  20211028033438_answered-at.down.sql  20211028033438_answered-at.up.sql  20211028121839_last_answers.down.sql  20211028121839_last_answers.up.sql  20211031153453_add-queue-fields.down.sql  20211031153453_add-queue-fields.up.sql  20211031174323_drop-last-answer-stage.down.sql  20211031174323_drop-last-answer-stage.up.sql  20211031183409_postgres-schema.up.sql  20211031183409_sqlite-schema.down.sql  20211031183409_sqlite-schema.up.sql  20211105010533_update-seed-question.down.sql  20211105010533_update-seed-question.up.sql  20211106222624_add-password.down.sql  20211106222624_add-password.up.sql  20211114210350_add-last-login.down.sql  20211114210350_add-last-login.up.sql
munje/src/: auth.rs  error.rs  errors.rs  lib.rs  main.rs  models.rs  mutations.rs  page.rs  prelude.rs  routes.rs  types.rs
munje/src/forms/: mod.rs  password.rs  text.rs
munje/src/questions/: models.rs  routes.rs
munje/src/queues/: choosers.rs  mod.rs  models.rs  routes.rs
munje/src/request/: auth.rs  mod.rs  request.rs
munje/src/requests/: database.rs  flash.rs  mod.rs
munje/src/routes/: questions.rs  testing.rs
munje/src/users/: mod.rs  models.rs  mutations.rs  routes.rs
munje/templates/: default-icon.jinja  home.jinja  layout.jinja  not-found.jinja  overview.jinja  two-columns.jinja
munje/templates/questions/: list.jinja  new.jinja  not-found.jinja  show.jinja
munje/templates/queues/: list.jinja  not-found.jinja  show.jinja
munje/templates/users/: login.jinja  signup.jinja
munje/tests/: questions.rs  routes.rs  support.rs  tests.rs
scripts/: pg-dump
