[package]
name = "munje"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.0.0-beta"
actix-web-flash-messages = { version = "0", features = ["cookies"] }
anyhow = "1"
askama = "0"
base64 = "0"
chrono = "0"
comrak = "0"
derive_more = "0"
dotenv = "0"
env_logger = "0"
log = "0"
named_tuple = "0"
rand = "0"
regex = "1"
reqwest = "0"
scraper = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
sqlx = { version = "0.5", features = ["sqlite", "migrate", "runtime-actix-native-tls", "offline"] }
timeago = "0"
totems = "0"
url = "2"
uuid = { version = "0", features = ["serde", "v4"] }

[dev-dependencies]
ctor = "0"
