[package]
name = "munje"
version = "0.0.1"
edition = "2018"

[dependencies]
actix-http = "3.0.0-beta.11"
actix-rt = "2"
actix-identity = "0.4.0-beta.3"
actix-web = "4.0.0-beta"
anyhow = "1"
rust-argon2 = "0"
askama = "0"
async-trait = "0"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
chrono-humanize = "0"
comrak = "0"
derive_more = "0"
dotenv = "0"
env_logger = "0"
envy = "0"
harsh = "0"
log = "0"
named_tuple = "0"
rand = "0"
regex = "1"
reqwest = "0"
scraper = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
sqlx = { version = "0.5", features = [ "sqlite", "migrate", "runtime-actix-native-tls", "offline", "postgres", "time", "chrono" ] }
time = "0.2"
totems = "0"
url = "2"
uuid = { version = "0", features = ["serde", "v4"] }

[dev-dependencies]
ctor = "0"

[features]
production = []
